# hpc-runner

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.playwright  Makefile  NOTES.md  README.md  RELEASE_NOTES.md  docker-compose.e2e.yml  docker-compose.yml  hpc_regression.db  pyproject.toml  slurm-lammps.env.example
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-change.md  pull-request.md
.github/workflows/: tests.yml
.streamlit/: config.toml
configs/jobs/: added.yaml  lammps.yaml  sample.yaml
configs/resources/: default.yaml
configs/solvers/_template/: README.md  solver.yaml
configs/solvers/cpuinfo-solver/: solver.yaml
configs/solvers/cpuinfo-test/: run.sh  solver.yaml
configs/solvers/echo-solver/: parser_config.yaml  run.sh  solver.yaml
configs/solvers/gromacs-local/: 1d5q.gro  1d5q_energy_minimization.mdp  1d5q_npt.mdp  1d5q_nvt.mdp  1d5q_sim.mdp  mdout.mdp  parser_config.yaml  run.sh  solver.yaml
configs/solvers/gromacs-solver/: 1d5q_npt.mdp  1d5q_nvt.mdp  1d5q_sim.mdp  mdout.mdp  parser_config.yaml  run.sh  solver.yaml
configs/solvers/lammps-slurm/: run.sh  solver.yaml
configs/systems/: default.yaml  dev-system.yaml  gromacs-docker.yaml  hpc-cluster-01.yaml  sci-slurm-lammps.yaml
configs/tests/: sample.yaml
docker/: Dockerfile  Dockerfile.gromacs  Dockerfile.playwright  README.md  docker-compose.e2e.yml  docker-compose.gromacs.yml  docker-compose.slurm.yml  docker-compose.yml
docker/lammps/: .gitignore  in.lammps  sbatch_lammps.sh
docker/slurm_sleep/: sbatch_sleep60.sh
docs/: ARCHITECTURE.md  GLOSSARY.md  TESTING_E2E_QUICKSTART.md  TESTING_SLURM.md  UI_DESIGN.md  USER_GUIDE.md  architecture.md  demo_plan.md  design.md  e2e_quickstart.md  glossary.md  project.csv  slurm_lammps_e2e.md  solver_template.md  technical_review_plan.md  user_guide.md
docs/demo/: demo_plan.md  technical_review_plan.md
prototypes/basic_restapi/: README.md  app.py  pyproject.toml
prototypes/basic_restapi/src/basic_restapi/: app.py
prototypes/basic_restapi/static/js/: index.js
prototypes/basic_restapi/templates/: index.html
prototypes/hpc-runner/: README.md  pyproject.toml  pytest.ini
prototypes/hpc-runner/configs/: runners.yaml
prototypes/hpc-runner/scripts/: clean.sh
prototypes/hpc-runner/src/hpc_regression/: __init__.py  __main__.py  log_parser.py  runner.py
prototypes/hpc-runner/src/hpc_regression/config/: __init__.py  loader.py  schemas.py
prototypes/hpc-runner/src/hpc_regression/parser/: parser.py
prototypes/hpc-runner/src/hpc_regression/storage/: db.py
prototypes/hpc-runner/tests/: conftest.py  test_runner.py
scripts/: run_matrix_preset_loop.py  start-services-slurm.sh  stop-services.sh  validate-docker.sh
solvers/_template/: README.md  parser_config.yaml  run.sh  solver.yaml
solvers/python-solver/: solver.yaml
src/api/: README.md  pyproject.toml
src/api/src/basic_restapi/: app.py  fastapi_app.py  invocations.py  slurm_tools.py
src/api/static/: style.css
src/api/static/js/: index.js
src/api/templates/: backup_index.html  index.html
src/api/tests/: test_api.py  test_slurm_lammps.py
src/core/: README.md  pyproject.toml  pytest.ini
src/core/tests/: test_cli.py  (+8 more)
src/ui/: api_config.py  app.py  charts.py  config_editor.py  matrix_grid_style.py  metrics_dashboard.py  pyproject.toml  runner.py
utils/gantt-tool/: README.md  generate_gantt.py  project.csv  pyproject.toml
(+50 files in other folders)
