[project]
name = "dow-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "structlog>=25.5.0",
    "streamlit>=1.35.0",
    "harness",
    "basic_restapi",
]

[tool.uv.workspace]
members = [
  "src/core",
  "src/api",
]

[tool.uv.sources]
harness = { workspace = true }
basic_restapi = { workspace = true }

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "pyyaml"]
