[project]
name = "basic_restapi"
version = "0.1.0"
description = "Minimal REST API for running the test harness using Flask and HTML"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "structlog>=25.5.0",
    "hpc_regression",
]

[project.scripts]
basic-restapi = "basic_restapi.app:main"
