[project]
name = "basic_restapi"
version = "0.1.0"
description = "Minimal REST API for running the test harness using Flask and HTML"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "structlog>=25.5.0",
    "harness",
]

[project.scripts]
basic-restapi = "basic_restapi.fastapi_app:main"
